<resources>
    <string name="app_name">sample-retrofit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="todo_login_text">Login</string>
    <string name="todo_login_btn">LOGIN</string>
    <string name="todo_login_username_text">Username</string>
    <string name="todo_login_password_text">Password</string>
    <string name="todo_app_name_text">Todo App</string>
    <string name="todo_app_welcome_text">Selamat datang</string>
    <string name="todo_app_display_username_text">Admin</string>
    <string name="todo_app_display_title_text">What to do today ?</string>
    <string name="todo_app_save_btn">SAVE</string>
    <string name="todo_app_footer_text">Todo App by Enigma</string>
    <string name="delete_icon_todo">Delete Icon Todo</string>
    <string name="edit_icon_todo" />
    <string name="image_icon_logout">Image Icon Logout</string>
    <string name="icon_add_todo">Icon Add Todo</string>
    <string name="icon_todo_back">Icon Todo Back</string>
    <string name="todo">Todo</string>
</resources>