<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TodoFragment"
    android:layout_margin="20dp"
    >

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/todo_app_name_text"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_logout"
        android:contentDescription="@string/image_icon_logout"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        android:text="@string/todo_app_welcome_text"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tvWelcomeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        android:text="@string/todo_login_username_text"
        android:layout_marginStart="5dp"
        android:textSize="12sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvWelcomeWhatTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        android:text="@string/todo_app_display_title_text"
        android:layout_marginTop="52dp"
        android:textSize="12sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todoRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeWhatTodo"
        android:layout_marginTop="46dp"/>

    <ImageView
        android:id="@+id/btnAddTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_add"
        android:layout_marginBottom="89dp"
        android:contentDescription="@string/icon_add_todo"/>

</androidx.constraintlayout.widget.ConstraintLayout>