<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.TodoFormFragment">

    <ImageView
        android:id="@+id/btnBackTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/icon_todo_back"/>

    <TextView
        android:id="@+id/tvWhatTodoForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/todo_app_display_title_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/teTodoField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhatTodoForm"
        android:layout_marginTop="129dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        android:hint="@string/todo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teTodoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveTodo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teTodoField"
        android:layout_marginTop="19dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/todo_app_save_btn"
        android:textSize="16sp"
        app:cornerRadius="25dp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>