<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.LoginFragment">

    <TextView
        android:id="@+id/tvLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/todo_login_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="112dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/teUsernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_login_username_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginText"
        android:layout_marginTop="78dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teUsername"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tePasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_login_username_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teUsernameField"
        android:layout_marginTop="6dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tePassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tePasswordField"
        android:layout_marginTop="21dp"
        android:textSize="16sp"
        android:text="@string/todo_login_btn"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorButton"/>

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/todo_app_footer_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="112dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>